gameofset/src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

#game-container {
  display: flex;
  flex-direction: row;
  gap: 10px;
}

.game-panel {
  border: 2px solid black;
  border-radius: 20px;
  width: fit-content;
  height: fit-content;
}

.game-panel .cards {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 10px;
  padding: 10px;
}

.header {
  display: grid;
  grid-template-columns: 1fr auto auto;
  align-items: center;
  border-bottom: 2px solid black;
  border-radius: 20px 20px 0 0;
  background-color: rgb(139, 72, 177);
  padding-left: 10px;
}

.buttons {
  display: flex;
  padding: 5px;
  gap: 5px;
}

.minimize-btn:hover {
  background-color: rgb(227, 223, 150);
  color: black;
}

.close-btn:hover {
  background-color: rgb(229, 124, 124);
  color: black;
}

.minimize-btn {
  background-color: rgb(42, 39, 39);
}

.close-btn {
  background-color: rgb(42, 39, 39);
}

.solutions-panel {
  border: 2px solid black;
  border-radius: 20px;
  width: fit-content;
}

.solutions-panel .cards {
  display: grid;
  justify-items: center;
  grid-template-columns: repeat(3, 1fr);
  gap: 10px;
  padding: 10px;
}

.solutions-panel h3 {
  margin: 0px;
  padding: 2px;
}

.game-btns-panel {
  display: flex;
  flex-direction: column;
  border: 2px solid black;
  border-radius: 20px;
  width: fit-content;
  height: fit-content;
}

.game-btn-container {
  display: flex;
  padding: 10px;
  gap: 10px;
  justify-content: center;
}

.game-btns-panel button {
  display: flex;
  justify-self: center;
  width: 80%;
}

.game-btn-container button:hover {
  background-color: rgb(49, 16, 69)
}

img {
  border: 2px solid black;
}

